--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 					<img class="img-responsive" src="images/slider/bg1.jpg" alt="slider">						
 					<div class="carousel-caption">
 						<h2>Web Ini Menggunakan Appication Cache </h2>
-						<h4><i>"Anda dapat mengkases Web ini secara Offile Mode"</i></h4>
+						<h4><i>"Anda dapat mengkases Web ini secara Offline Mode"</i></h4>
 					</div>
 				</div>
 				<div class="item">
 					<img class="img-responsive" src="images/slider/bg2.jpg" alt="slider">	
 					<div class="carousel-caption">
 						<h2>Application Cache hanya </br>akan berjalan pada Webserver</h2>
-						<h4><i>"Anda dapat mengkases Content Web ini secara Offile Mode"</i></h4>
+						<h4><i>"Anda dapat mengkases Content Web ini secara Offline Mode"</i></h4>
 					</div>
 				</div>
 				<div class="item">
